Updating CV and commenting out all the broken Shopify code I don't need for the time being. Fixed bug with the page breaks on print.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -84,13 +84,6 @@ a {
 	}
 }
 
-@media print {
-	.Collapsible--career .Collapsible__contentInner > div > div:nth-child(even) {
-		page-break-after: always;
-	}
-}
-
-
 
 @keyframes expandMenuDrawer {
   0% {
